@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.19-cur, done by cs@nop.<br/>
-tested: 2022-02-19 16:53:44, took 00:06:47, with 100 workers, on 2696 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2022-02-19 17:41:34, took 00:07:04, with 100 workers, on 2698 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1694,6 +1694,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-match16.tst">qos-match16.tst</a></td><td>success</td><td>qos egress ttl matcher</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-match17.tst">qos-match17.tst</a></td><td>success</td><td>qos ingress flow matcher</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-match18.tst">qos-match18.tst</a></td><td>success</td><td>qos egress flow matcher</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/qos-match19.tst">qos-match19.tst</a></td><td>success</td><td>qos ingress sgt matcher</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/qos-match20.tst">qos-match20.tst</a></td><td>success</td><td>qos egress sgt matcher</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-set01.tst">qos-set01.tst</a></td><td>success</td><td>qos ingress qosgroup set</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-set02.tst">qos-set02.tst</a></td><td>success</td><td>qos ingress tos set</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/qos-set03.tst">qos-set03.tst</a></td><td>success</td><td>qos egress tos set</td></tr>
